--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,28 @@
 language: ruby
 sudo: false
 cache: bundler
-script: 'bundle exec rake test:coverage --trace'
 before_install:
   - gem install bundler
+script:
+  - bundle exec rubocop
+  - bundle exec rake test
 rvm:
-  - 2.2
+  - 2.3.8
+  - 2.4.5
+  - 2.5.3
+  - 2.6.3
   - ruby-head
   - jruby-head
-  - rbx-2
+  - rbx-3
 matrix:
   allow_failures:
-    - rvm: rbx-2
-    - rvm: jruby-head
     - rvm: ruby-head
+    - rvm: jruby-head
+    - rvm: rbx-3
+notifications:
+  webhooks:
+    urls:
+      - https://webhooks.gitter.im/e/a44b19cc5cf6db25fa87
+    on_success: change
+    on_failure: always
+    on_start: never
